--- a/UC_SharpGLSimulate.csproj
+++ b/UC_SharpGLSimulate.csproj
@@ -76,7 +76,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include=".editorconfig" />
     <None Include="app.config" />
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
